emergency stop
if the solve program runs for too long it should stop

--- a/TW.css
+++ b/TW.css
@@ -12,7 +12,8 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    top: 5px;
+    font-size: 2em;
 }
 
 header {
